# erts-controller

./: .clang-format  .gitignore  .pylintrc  .styleguide  .styleguide-license  .wpiformat  CMakeLists.txt  LICENSE.md  README.md  erts_diff_drive.py  plot_csvs.py
src/: DCMotor.hpp  Discretization.hpp  ERTSDiffDrive.cpp  RK4.hpp  WriteVectorCSV.hpp  dc_motor.hpp  discretization.hpp  erts_diff_drive.cpp  rk4.hpp  write_vector_csv.hpp
